[gd_scene load_steps=8 format=2]

[ext_resource path="res://boom_joint.gd" type="Script" id=1]
[ext_resource path="res://boom02.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.5, 0.5, 5 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0196078, 0.243137, 0.396078, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.25, 0.25, 2.5 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.2, 0.321569, 0.647059, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.47451, 0.6, 0.870588, 1 )

[node name="boom_joint" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 0.868129, -0.496338, 0, 0.496338, 0.868129, 0, 1.33356, -0.720741 )
script = ExtResource( 1 )

[node name="boom01" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 0.849414, 0.527727, 0, -0.527727, 0.849414, 0, 1.06324, 2.45671 )

[node name="MeshInstance" type="MeshInstance" parent="boom01"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="boom01"]
shape = SubResource( 3 )

[node name="boom02" type="RigidBody" parent="boom01"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="boom01/boom02"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="boom01/boom02"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="boom03" type="RigidBody" parent="boom01/boom02"]

[node name="MeshInstance" type="MeshInstance" parent="boom01/boom02/boom03"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="boom01/boom02/boom03"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )
